--- a/YuGuan/res/layout/chat_xiaohei.xml
+++ b/YuGuan/res/layout/chat_xiaohei.xml
@@ -89,7 +89,7 @@
             android:orientation="vertical" >
 
             <TextView
-                android:id="@+id/title"
+                android:id="@+id/mallTit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -442,7 +442,6 @@
                         android:paddingRight="2dp"
                         android:paddingTop="15dp"
                         android:singleLine="true"
-                        android:text="立即报名"
                         android:textColor="#FFF"
                         android:textSize="24sp" />
 
@@ -468,11 +467,12 @@
                     android:orientation="horizontal" >
 
                     <ImageView
+                        android:id="@+id/loveImg"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
-                        android:background="@drawable/unlove_48"
-                        android:paddingLeft="30dp" />
+                        android:src="@drawable/unlove_48"
+                        android:paddingLeft="20dp" />
 
                     <TextView
                         android:id="@+id/shoucang"
@@ -543,42 +543,6 @@
                     android:layout_gravity="center_vertical"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content" >
-					<!-- 
-                    <cn.buaa.myweixin.UserImage
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        diycomp:userimage="@drawable/head1_128"
-                        diycomp:username="夺命小丸子"
-                        diycomp:usersex="@drawable/boy_24" />
-
-                    <cn.buaa.myweixin.UserImage
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        diycomp:userimage="@drawable/head2_128"
-                        diycomp:username="夺命小丸子"
-                        diycomp:usersex="@drawable/boy_24" />
-
-                    <cn.buaa.myweixin.UserImage
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        diycomp:userimage="@drawable/head3_128"
-                        diycomp:username="夺命小丸子"
-                        diycomp:usersex="@drawable/girl_24" />
-
-                    <cn.buaa.myweixin.UserImage
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        diycomp:userimage="@drawable/head1_128"
-                        diycomp:username="夺命小丸子"
-                        diycomp:usersex="@drawable/boy_24" />
-
-                    <cn.buaa.myweixin.UserImage
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        diycomp:userimage="@drawable/head1_128"
-                        diycomp:username="夺命小丸子"
-                        diycomp:usersex="@drawable/boy_24" />
-                         -->
                 </LinearLayout>
             </HorizontalScrollView>
 
@@ -593,37 +557,6 @@
                 android:orientation="vertical"
                 android:padding="10dp" >
 
-                 <!-- 
-                <cn.buaa.myweixin.CommentInfo
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    diycomp:comment="夺命小丸命小丸命小丸命小夺命小丸命小丸命小丸命小夺命小丸命小丸命小丸命小夺命小丸命小丸命小丸命小"
-                    diycomp:commenttime="2014年5月29日20:32:31"
-                    diycomp:commentuser="夺命小丸子：" />
-
-                <cn.buaa.myweixin.CommentInfo
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    diycomp:comment="夺命小丸命小丸命小丸命小夺命小丸命小丸命小丸命小夺命小丸命小丸命小丸命小夺命小丸命小丸命小丸命小"
-                    diycomp:commenttime="2014年5月29日20:32:37"
-                    diycomp:commentuser="夺命小丸子：" />
-
-                <cn.buaa.myweixin.CommentInfo
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    diycomp:comment="夺命小丸命小丸命小丸命小夺命小丸命小丸命小丸命小夺命小丸命小丸命小丸命小夺命小丸命小丸命小丸命小"
-                    diycomp:commenttime="2014年5月29日20:32:40"
-                    diycomp:commentuser="夺命小丸子：" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:padding="10dp"
-                    android:text="加载更多评论>>"
-                    android:textColor="#000"
-                    android:textSize="25sp" />
-                -->
                 <com.yuguan.activities.RefreshListView
 			        android:id="@+id/commentList"
 			        android:layout_width="fill_parent"
