--- a/YuGuan/res/layout/main_tab_weixin.xml
+++ b/YuGuan/res/layout/main_tab_weixin.xml
@@ -123,7 +123,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:cacheColorHint="#00000000"
-        android:scrollbars="horizontal" >
+        android:scrollbars="vertical" >
     </com.yuguan.activities.RefreshListView>
 
 </LinearLayout>
