--- a/YuGuan/res/layout/chat_xiaohei.xml
+++ b/YuGuan/res/layout/chat_xiaohei.xml
@@ -57,7 +57,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
             android:background="@drawable/chat_send_btn"
-            android:text="发送" />
+            android:text="评论" />
 
         <EditText
             android:id="@+id/et_sendmessage"
@@ -429,6 +429,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="90dp"
+                    android:minWidth="150dp"
                     android:layout_alignParentLeft="true"
                     android:layout_gravity="right"
                     android:background="#BDC40C"
