--- a/YuGuan/res/layout/main_tab_address.xml
+++ b/YuGuan/res/layout/main_tab_address.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#eee"
+    android:background="#fcfcfc"
     android:orientation="vertical" >
 
     <!--
@@ -77,6 +77,8 @@
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:cacheColorHint="#00000000"
+        android:dividerHeight="20dip"
+        android:divider="@android:color/white"
         android:scrollbars="vertical" >
     </com.yuguan.activities.RefreshListView>
 
