--- a/YuGuan/res/layout/main_tab_friends.xml
+++ b/YuGuan/res/layout/main_tab_friends.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#eee"
+    android:background="#fcfcfc"
     android:orientation="vertical" >
 
     <!--
@@ -107,13 +107,13 @@
             android:src="@drawable/mm_submenu" />
     </RelativeLayout>    -->
 
-<!--
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/search_bar_bg"
         android:gravity="left" >
-
+		
         <Button
             android:id="@+id/friend_location_btn"
             android:layout_width="wrap_content"
@@ -126,7 +126,7 @@
             android:textColor="#000000"
             android:textSize="14sp" >
         </Button>
-
+<!--
         <HorizontalScrollView
             android:id="@+id/friend_mColumnHorizontalScrollView"
             android:layout_width="wrap_content"
@@ -144,14 +144,17 @@
                 android:paddingRight="10.0dip" >
             </LinearLayout>
            
-        </HorizontalScrollView> 
+        </HorizontalScrollView> -->
     </LinearLayout>
--->
+
     <com.yuguan.activities.RefreshListView
         android:id="@+id/allfriendsLists"
         android:layout_width="fill_parent"
         android:layout_height="match_parent"
         android:cacheColorHint="#00000000"
+        android:background="#fff"
+        android:dividerHeight="20dip"
+        android:divider="@android:color/white"
         android:scrollbars="vertical" >
     </com.yuguan.activities.RefreshListView>
 
