--- a/YuGuan/res/layout/main_tab_weixin.xml
+++ b/YuGuan/res/layout/main_tab_weixin.xml
@@ -123,6 +123,8 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:cacheColorHint="#00000000"
+        android:dividerHeight="20dip"
+        android:divider="@android:color/white"
         android:scrollbars="vertical" >
     </com.yuguan.activities.RefreshListView>
 
