--- a/YuGuan/res/layout/mall_list.xml
+++ b/YuGuan/res/layout/mall_list.xml
@@ -2,22 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:diycomp="http://schemas.android.com/apk/res/cn.buaa.myweixin"
     android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:background="#fff"
-    android:orientation="horizontal"
-    android:padding="10dp" >
+    android:layout_height="138dp"
+    android:background="@drawable/linearlayout_line"
+    android:orientation="horizontal" >
+
 
     <ImageView
         android:id="@+id/mallPic"
         android:layout_width="150dp"
-        android:layout_height="80dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center_vertical"
         android:scaleType="fitXY"
         android:src="@drawable/playyumao" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="80dp"
-        android:gravity="center_vertical"
+        android:layout_height="100dp"
+        android:layout_gravity="center_vertical"
         android:paddingLeft="10dp" >
 
         <TextView
@@ -28,10 +29,10 @@
             android:paddingBottom="2dp"
             android:paddingTop="2dp"
             android:singleLine="true"
-            android:visibility="gone"
             android:textColor="#000"
-            android:textSize="20sp" />
-        
+            android:textSize="20sp"
+            android:visibility="gone" />
+
         <TextView
             android:id="@+id/mallTitle"
             android:layout_width="wrap_content"
@@ -57,17 +58,31 @@
             android:textColor="#000"
             android:textSize="15sp" />
 
-         <!---->
+        <!--  -->
         
+         <LinearLayout
+            android:id="@+id/ssjiange"
+            android:layout_width="fill_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="5dp"
+            android:layout_below="@id/mallAddress"
+            android:background="@drawable/linearlayout_line" >
+
+            <TextView
+                android:layout_width="1dp"
+                android:layout_height="1dp" />
+        </LinearLayout>
+        
+
         <cn.buaa.myweixin.ScoreInfo
             android:id="@+id/mallScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/mallAddress"
+            android:layout_below="@id/ssjiange"
+            android:layout_marginTop="10dp"
             android:paddingBottom="2dp"
-            android:paddingTop="2dp">
+            android:paddingTop="2dp" >
         </cn.buaa.myweixin.ScoreInfo>
-         
     </RelativeLayout>
 
 </LinearLayout>
