--- a/YuGuan/res/values/styles.xml
+++ b/YuGuan/res/values/styles.xml
@@ -120,4 +120,46 @@
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
     </style>
+    
+    <style name="fontstyle_18">
+        <item name="android:textSize">18.0sp</item>
+        <item name="android:textColor">#524E4E</item>
+    </style>
+    
+    <style name="fontstyle_20">
+        <item name="android:textSize">20.0sp</item>
+        <item name="android:textColor">#524E4E</item>
+    </style>
+    
+    <style name="fontstyle_red_20">
+        <item name="android:textSize">20.0sp</item>
+        <item name="android:textColor">#DC2F1F</item>
+    </style>
+    
+    <style name="fontstyle_22">
+        <item name="android:textSize">22.0sp</item>
+        <item name="android:textColor">#524E4E</item>
+    </style>
+    
+     <style name="fontstyle_bold_24">
+         <item name="android:textStyle">bold</item>
+        <item name="android:textSize">24.0sp</item>
+        <item name="android:textColor">#000</item>
+    </style>
+    
+     <style name="fontstyle_white_18">
+        <item name="android:textSize">18.0sp</item>
+        <item name="android:textColor">#fff</item>
+    </style>
+    
+     <style name="fontstyle_black_16">
+        <item name="android:textSize">16.0sp</item>
+        <item name="android:textColor">#000</item>
+    </style>
+    
+     <style name="fontstyle_pingfen_16">
+        <item name="android:textSize">16.0sp</item>
+        <item name="android:textColor">#FFB200</item>
+    </style>
+    
 </resources>
