--- a/YuGuan/res/layout/login.xml
+++ b/YuGuan/res/layout/login.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="#eee"
-    android:gravity="center_horizontal"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -34,40 +33,63 @@
             android:textStyle="bold" />
     </RelativeLayout>
 
-    <EditText
-        android:id="@+id/login_user_edit"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login_top_layout"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="25dp"
-        android:background="@drawable/login_editbox"
-        android:hint="（请输入用户名）"
-        android:singleLine="true"
-        android:textColor="#000"
-        android:textSize="15sp" />
+        android:orientation="horizontal" >
 
-    <EditText
-        android:id="@+id/login_passwd_edit"
-        android:layout_width="fill_parent"
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/tab_find_frd_normal" />
+
+        <EditText
+            android:id="@+id/login_user_edit"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/login_editbox"
+            android:hint="（请输入用户名）"
+            android:singleLine="true"
+            android:textColor="#000"
+            android:textSize="15sp" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/login_user_edit"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="25dp"
-        android:background="@drawable/login_editbox"
-        android:hint="(请输入密码)"
-        android:password="true"
-        android:singleLine="true"
-        android:textColor="#000"
-        android:textSize="15sp" />
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/tab_find_frd_normal" />
+
+        <EditText
+            android:id="@+id/login_passwd_edit"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/login_editbox"
+            android:hint="(请输入密码)"
+            android:password="true"
+            android:singleLine="true"
+            android:textColor="#000"
+            android:textSize="15sp" />
+    </LinearLayout>
 
     <RelativeLayout
         android:id="@+id/checkboxs"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/login_passwd_edit"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="20dp" >
@@ -93,24 +115,23 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/checkboxs"
         android:layout_marginTop="20dp" >
 
         <Button
             android:id="@+id/forget_passwd"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="120dp"
+            android:layout_height="40dp"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             android:layout_marginLeft="23dp"
-            android:layout_marginTop="5dp"
-            android:background="#0000"
+            android:background="@drawable/white_line"
             android:onClick="login_pw"
-            android:text="忘记密码?"
-            android:textColor="#00f"
+            android:text="立即注册"
             android:textSize="16sp" />
 
         <Button
             android:id="@+id/login_login_btn"
-            android:layout_width="90dp"
+            android:layout_width="120dp"
             android:layout_height="40dp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="20dp"
@@ -121,4 +142,15 @@
             android:textSize="18sp" />
     </RelativeLayout>
 
-</RelativeLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="23dp"
+        android:layout_marginTop="5dp"
+        android:background="#0000"
+        android:onClick="login_pw"
+        android:text="忘记密码?"
+        android:textColor="#00f"
+        android:textSize="16sp" />
+
+</LinearLayout>
